<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_total_label">Bill Total:</string>
    <string name="tip_percent_label">Tip %:</string>
    <string name="custom_tip_label">Custom:</string>
    <string name="tip_label">Tip:</string>
    <string name="total_label">Total:</string>
    <string name="bill_total_hint">Enter Bill Value</string>
    <string name="radio_button_10_percent">10%</string>
    <string name="radio_button_15_percent">15%</string>
    <string name="radio_button_18_percent">18%</string>
    <string name="radio_button_custom_percent">Custom</string>
    <string name="custom_percent_value">20%</string>
    <string name="exit_button">Exit</string>
</resources>